--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "maczheng/cwapp",
     "description": "系统应用功能",
+    "version":"1.01",
     "authors": [
         {
             "name": "zhengbinGitHub",
@@ -17,6 +18,6 @@
             "CwApp\\": "src/"
         }
     },
-    "require": {},
+    "license": "MIT",
     "minimum-stability": "dev"
 }
