--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "1.0.1-dev"
+            "main": "1.0.2"
         }
     },
     "license": "MIT",
