--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "extra": {
         "branch-alias": {
-            "main-dev": "1.0.2"
+            "main-dev": "1.0.2-dev"
         }
     },
     "license": "MIT",
