--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,7 @@
             "email": "122606861@qq.com"
         }
     ],
-    "require": {
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0"
-    },
+    "require": {},
     "autoload": {
         "psr-0": {
             "CwApp\\": "src/"
