--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "CwApp\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "CwApp\\Tests\\": "tests/"
+        }
+    },
     "extra": {
         "branch-alias": {
             "main-dev": "v1.0.9-dev"
